ajustes no mobile

--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $CordeFundo: #040714;
 $CorTextoPricipal: silver;
 $CorTextoSecundario: #f9f9f9;
+$CorDeFundoBotaoPrimario: #6421ff;
+$CorDeFundoBotaoSecundario: #0063e5;
+$corDeFundoBotaoDark: #000;
