--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         gap: 24px;
         margin-top: 44px;
 
+        @media (max-width: 768px    ){
+            grid-template-columns: 1fr 1fr
+        }
+
         &--is-active{
             display: grid;
         }
@@ -26,6 +30,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-width:768px){
+            white-space: nowrap; //força para que caiba na mesma linha mesmo ultrapassando o limite
+            overflow-x: scroll;
+            padding-left: 18px;
+        }
+
         &__button{
             color: variaveis.$CorTextoSecundario;
             font-size: 20px;
@@ -39,6 +49,10 @@
 
             &--is-active{
                 border-color: variaveis.$CorTextoSecundario ;
+            }
+
+            @media (max-width:768px){
+                font-size: 16px;
             }
         } 
     }
