--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 @use 'variaveis';
 @use 'shows';
 @use 'plans'; 
+@use 'available_devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
 
 @font-face{ //importando fonts
     font-family: Avenir;
@@ -20,6 +24,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style: none;
 }
 
 
@@ -40,15 +45,28 @@ body{
 }
 
 .text--big{
-    @include text(18px)
+    @include text(18px);
+
+    @media (max-width:768px){
+        @include text(15px);
+       }
 }
 
 .text{
     @include text;
+
+    @media (max-width:768px){
+        @include text(14px);
+       }
+    
 }
 
 .text--small{
-    @include text(12px) 
+    @include text(12px);
+
+    @media (max-width:768px){
+        @include text(11px);
+    }
 }
 
 .link-text{
@@ -59,25 +77,114 @@ body{
 
 .title-big{
     @include title(44px);
+
+    @media (max-width:768px){
+        @include title(26px);
+       }
 }
 
 .title{
    @include title;
+
+   @media (max-width:768px){
+    @include title(24px);
+   }
 }
 
 .title--small{
     @include title(28px);
+
+    @media (max-width:768px){
+        @include title(22px);
+       }
 }
 
 .button{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$CorTextoSecundario ;
-    background-color: #6421ff;
+    background-color: variaveis.$CorDeFundoBotaoPrimario;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px; 
+    text-decoration: none;
+    padding: 8px 14px;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$CorDeFundoBotaoPrimario;
+
+    &:hover{
+        background-color: lighten(variaveis.$CorDeFundoBotaoPrimario, 3%);
+    }
+
+    &--secondary{ 
+        background-color: variaveis.$CorDeFundoBotaoSecundario;
+        border-color: variaveis.$CorDeFundoBotaoSecundario ;
+
+        &:hover{
+            background-color: lighten(variaveis.$CorDeFundoBotaoSecundario, 3%); //função do SASS para clarear
+        }
+    }
+    &--dark{
+        background-color: rgba(variaveis.$corDeFundoBotaoDark, 0.8);
+        border-color:variaveis.$CorTextoSecundario;
+
+        &:hover{
+            background-color:variaveis.$CorTextoSecundario ;
+            color: variaveis.$CordeFundo;
+        }
+
+    }
+}
+
+.image-text-section{
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    @media (max-width:768px){
+        display: block;
+    }
+
+    img{
+        max-width: 100%;
+    }
+
+    &__text_container{
+        padding: 0 2vw;
+
+        h2{
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width{ //modificador
+        display: block;
+        position: relative;
+
+        img{
+            width: 100%;
+        }
+
+        &__text_container{ //texto dentro da imagem alinhando elementos  
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 100%;
+            width: calc(50% - 5.6vw);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            @media (max-width:768px) {
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
+        }
+
+    }
 }
